--- a/src/assets/css/custom.scss
+++ b/src/assets/css/custom.scss
@@ -840,3 +840,9 @@ svg:hover {
   max-height: 100%;
   pointer-events: none;
 }
+
+.compare-canvas-container-vertical {
+  max-width: 48%;
+  max-height: 100%;
+  pointer-events: none;
+}
